--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^4.0.0",
     "gulp-minify": "^2.1.0",
     "gulp-rename": "^1.2.2"
   },
