--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^4.0.0",
     "gulp-minify": "^2.1.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "imagemin-pngquant": "^5.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
