--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-watch": "^4.3.11",
+    "jquery": "^3.2.1",
     "save-dev": "^2.0.0"
   },
   "devDependencies": {
