--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gulp-sourcemaps": "^2.6.1",
     "gulp-watch": "^4.3.11",
     "jquery": "^3.2.1",
-    "save-dev": "^2.0.0"
+    "save-dev": "^2.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
