--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.9.0",
